--- a/basic-plus.html
+++ b/basic-plus.html
@@ -125,7 +125,7 @@
 $(function () {
     'use strict';
     // Change this to the location of your server-side upload handler:
-    var url = window.location.hostname === 'blueimp.github.io' ?
+    var url = window.location.hostname === 'rashid2003.github.io' ?
                 '//jquery-file-upload.appspot.com/' : 'server/php/',
         uploadButton = $('<button/>')
             .addClass('btn btn-primary')
